fixed overlapping texts

--- a/src/scss/components/_reddits.scss
+++ b/src/scss/components/_reddits.scss
@@ -66,6 +66,7 @@
 
           h4 {
             color: #5389db;
+            word-break: break-all;
           }
           .comments_icons {
             display: flex;
